remaining enemy ships are counting now, area of draggable ships dosn`t hides after game starts for design sake

--- a/index.html
+++ b/index.html
@@ -25,10 +25,11 @@
                     
                 </div>
                 <div id="oponentsShipArea">
-                    <div id="fourcell" class="notDraggableShip"></div>
-                    <div id="threecell" class="notDraggableShip"></div>
-                    <div id="twocell" class="notDraggableShip"></div>
-                    <div id="onecell" class="notDraggableShip"></div>
+                    <div id="theShipModule"><div id="fourcell" class="notDraggableShip"></div> <p>left:  <span id="fourcellLeft">1</span></p> </div>
+                    <div id="theShipModule"><div id="threecell" class="notDraggableShip"></div> <p>left:  <span id="threecellLeft">2</span></p> </div>
+                    <div id="theShipModule"><div id="twocell" class="notDraggableShip"></div> <p>left:  <span id="twocellLeft">3</span></p> </div>
+                    <div id="theShipModule"><div id="onecell" class="notDraggableShip"></div> <p>left:  <span id="onecellLeft">4</span></p> </div>
+ 
                 </div>
             </div>
             <div id="battlefields">
