randomize ships created but doesnt consider placed ships, bugfix soon

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                     <div id="theShipModule"><div id="onecell" class="draggableShip" class='animated' draggable="true"></div> <p>x<span id="onecellCounter">4</span></p> </div>
                     
                 </div>
+                <button>Randomise ships?</button>
                 <div id="oponentsShipArea">
                     <div id="theShipModule"><div id="fourcell" class="notDraggableShip"></div> <p>left:  <span id="fourcellLeft">1</span></p> </div>
                     <div id="theShipModule"><div id="threecell" class="notDraggableShip"></div> <p>left:  <span id="threecellLeft">2</span></p> </div>
